<resources>
    <string name="app_name">Music</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="shuffle">Shuffle</string>
    <string name="play">Play</string>
    <string name="separator">\u25CF</string>
    <string name="disc_number">Disc %1$d</string>
</resources>